# QALIS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/rq1/: dimension_coverage_analysis.py
analysis/rq2/: metric_correlation_analysis.py
analysis/rq3/: comparative_effectiveness_analysis.py
analysis/statistical/: mixed_effects_models.py
baselines/: comparative_analysis_full.csv  comparative_summary_table.csv
baselines/helm/: S1_helm_evaluation.json  S2_helm_evaluation.json  S3_helm_evaluation.json  S4_helm_evaluation.json  helm_methodology.json  helm_monthly_detection_log.csv  helm_raw_benchmark_scores.csv  helm_scenario_dimension_mapping.csv
baselines/iso25010/: S1_iso25010_evaluation.json  S2_iso25010_evaluation.json  (+5 more)
configs/: annotation_config.yaml  ci_cd_config.yaml  classifier_config.yaml  embedding_config.yaml  metrics_thresholds.yaml  monitoring_config.yaml  nli_classifier_config.yaml  perturbation_config.yaml  qalis_config.yaml
data/: README.md  generate_data.py
docs/: index.md
experiments/: README.md  experiment_registry.json
framework/: qalis_framework_spec.md
interviews/: README.md  interview_metadata.csv
notebooks/: 01_getting_started.ipynb  02_metric_correlations.ipynb  03_longitudinal_analysis.ipynb  04_baseline_comparison.ipynb  05_annotation_analysis.ipynb  06_perturbation_analysis.ipynb  07_full_replication.ipynb  08_incident_analysis.ipynb  09_red_team_analysis.ipynb  10_system_profiles.ipynb  11_interview_analysis.ipynb  12_threshold_calibration.ipynb  13_statistical_models.ipynb  14_baseline_deep_dive.ipynb  README.md
perturbation_tests/: README.md
red_team/: README.md  run_red_team.py
reports/: batch_results.json  ci_quality_gate_20241231T020012Z.json  daily_regression_S1.json  daily_regression_S2.json  daily_regression_S3.json  daily_regression_S4.json  qalis_report_S1_2024-12-31.html  quality_gate_S1_20241231.json  replication_summary.json
supplementary/: README.md
tests/: __init__.py  conftest.py  test_analysis.py  test_collectors.py  test_dashboard_store.py  test_framework.py  test_metrics_functional_correctness.py  test_metrics_robustness.py  test_metrics_safety_security.py  test_metrics_semantic_faithfulness.py  test_metrics_system_integration.py  test_result.py  test_utils_scoring.py  test_utils_validation.py
toolkit/: README.md  __init__.py
(+230 files in other folders)
